{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 21,
  "lineage": "e69454cb-7866-1f9a-365a-d620c2d42e1e",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "UdacityP1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/1d53902c-4bc6-44c8-82da-d1a59f04c098/resourceGroups/UdacityP1/providers/Microsoft.Network/loadBalancers/UdacityP1-lb/frontendIPConfigurations/PublicIpAddress",
                "name": "PublicIpAddress",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/1d53902c-4bc6-44c8-82da-d1a59f04c098/resourceGroups/UdacityP1/providers/Microsoft.Network/publicIPAddresses/UdacityP1-pip"
              }
            ],
            "id": "/subscriptions/1d53902c-4bc6-44c8-82da-d1a59f04c098/resourceGroups/UdacityP1/providers/Microsoft.Network/loadBalancers/UdacityP1-lb",
            "location": "eastus",
            "name": "UdacityP1-lb",
            "resource_group_name": "UdacityP1",
            "sku": "Basic",
            "tags": {
              "environment": "UdacityP1"
            }
          },
          "dependencies": [
            "azurerm_public_ip.UdacityP1",
            "azurerm_resource_group.UdacityP1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "UdacityP1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1d53902c-4bc6-44c8-82da-d1a59f04c098/resourceGroups/UdacityP1/providers/Microsoft.Network/loadBalancers/UdacityP1-lb/backendAddressPools/BackendPool",
            "loadbalancer_id": "/subscriptions/1d53902c-4bc6-44c8-82da-d1a59f04c098/resourceGroups/UdacityP1/providers/Microsoft.Network/loadBalancers/UdacityP1-lb",
            "name": "BackendPool",
            "resource_group_name": "UdacityP1"
          },
          "dependencies": [
            "azurerm_lb.UdacityP1",
            "azurerm_public_ip.UdacityP1",
            "azurerm_resource_group.UdacityP1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "UdacityP1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1d53902c-4bc6-44c8-82da-d1a59f04c098/resourceGroups/UdacityP1/providers/Microsoft.Network/loadBalancers/UdacityP1-lb/probes/ssh-running-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/1d53902c-4bc6-44c8-82da-d1a59f04c098/resourceGroups/UdacityP1/providers/Microsoft.Network/loadBalancers/UdacityP1-lb",
            "name": "ssh-running-probe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp",
            "resource_group_name": "UdacityP1"
          },
          "dependencies": [
            "azurerm_lb.UdacityP1",
            "azurerm_public_ip.UdacityP1",
            "azurerm_resource_group.UdacityP1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "UdacityP1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/1d53902c-4bc6-44c8-82da-d1a59f04c098/resourceGroups/UdacityP1/providers/Microsoft.Network/loadBalancers/UdacityP1-lb/backendAddressPools/BackendPool",
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/1d53902c-4bc6-44c8-82da-d1a59f04c098/resourceGroups/UdacityP1/providers/Microsoft.Network/loadBalancers/UdacityP1-lb/frontendIPConfigurations/PublicIpAddress",
            "frontend_ip_configuration_name": "PublicIpAddress",
            "frontend_port": 80,
            "id": "/subscriptions/1d53902c-4bc6-44c8-82da-d1a59f04c098/resourceGroups/UdacityP1/providers/Microsoft.Network/loadBalancers/UdacityP1-lb/loadBalancingRules/http",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/1d53902c-4bc6-44c8-82da-d1a59f04c098/resourceGroups/UdacityP1/providers/Microsoft.Network/loadBalancers/UdacityP1-lb",
            "name": "http",
            "probe_id": "/subscriptions/1d53902c-4bc6-44c8-82da-d1a59f04c098/resourceGroups/UdacityP1/providers/Microsoft.Network/loadBalancers/UdacityP1-lb/probes/ssh-running-probe",
            "protocol": "Tcp",
            "resource_group_name": "UdacityP1"
          },
          "dependencies": [
            "azurerm_lb.UdacityP1",
            "azurerm_lb_backend_address_pool.UdacityP1",
            "azurerm_lb_probe.UdacityP1",
            "azurerm_public_ip.UdacityP1",
            "azurerm_resource_group.UdacityP1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "UdacityP1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1d53902c-4bc6-44c8-82da-d1a59f04c098/resourceGroups/UdacityP1/providers/Microsoft.Network/networkInterfaces/UdacityP1-nic-0",
            "internal_domain_name_suffix": "t3qjt01i2miebb1qvic0kqvjng.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "UdacityP1-nic-config",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1d53902c-4bc6-44c8-82da-d1a59f04c098/resourceGroups/UdacityP1/providers/Microsoft.Network/virtualNetworks/UdacityP1-vnet/subnets/UdacityP1-subnet"
              }
            ],
            "location": "eastus",
            "name": "UdacityP1-nic-0",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "UdacityP1"
          },
          "dependencies": [
            "azurerm_resource_group.UdacityP1",
            "azurerm_subnet.UdacityP1",
            "azurerm_virtual_network.UdacityP1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1d53902c-4bc6-44c8-82da-d1a59f04c098/resourceGroups/UdacityP1/providers/Microsoft.Network/networkInterfaces/UdacityP1-nic-1",
            "internal_domain_name_suffix": "t3qjt01i2miebb1qvic0kqvjng.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "UdacityP1-nic-config",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1d53902c-4bc6-44c8-82da-d1a59f04c098/resourceGroups/UdacityP1/providers/Microsoft.Network/virtualNetworks/UdacityP1-vnet/subnets/UdacityP1-subnet"
              }
            ],
            "location": "eastus",
            "name": "UdacityP1-nic-1",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "UdacityP1"
          },
          "dependencies": [
            "azurerm_resource_group.UdacityP1",
            "azurerm_subnet.UdacityP1",
            "azurerm_virtual_network.UdacityP1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "UdacityP1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1d53902c-4bc6-44c8-82da-d1a59f04c098/resourceGroups/UdacityP1/providers/Microsoft.Network/networkSecurityGroups/UdacityP1-security-group",
            "location": "eastus",
            "name": "UdacityP1-security-group",
            "resource_group_name": "UdacityP1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "TCP",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.UdacityP1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "UdacityP1vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.0.0/16",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/1d53902c-4bc6-44c8-82da-d1a59f04c098/resourceGroups/UdacityP1/providers/Microsoft.Network/networkSecurityGroups/UdacityP1-security-group/securityRules/allow_subnet_vm_inbound",
            "name": "allow_subnet_vm_inbound",
            "network_security_group_name": "UdacityP1-security-group",
            "priority": 200,
            "protocol": "TCP",
            "resource_group_name": "UdacityP1",
            "source_address_prefix": "10.0.0.0/16",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.UdacityP1",
            "azurerm_resource_group.UdacityP1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "blockinternetaccess",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/1d53902c-4bc6-44c8-82da-d1a59f04c098/resourceGroups/UdacityP1/providers/Microsoft.Network/networkSecurityGroups/UdacityP1-security-group/securityRules/blockinternetaccess",
            "name": "blockinternetaccess",
            "network_security_group_name": "UdacityP1-security-group",
            "priority": 300,
            "protocol": "*",
            "resource_group_name": "UdacityP1",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.UdacityP1",
            "azurerm_resource_group.UdacityP1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "UdacityP1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/1d53902c-4bc6-44c8-82da-d1a59f04c098/resourceGroups/UdacityP1/providers/Microsoft.Network/publicIPAddresses/UdacityP1-pip",
            "idle_timeout_in_minutes": 30,
            "ip_address": "20.185.67.231",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "UdacityP1-pip",
            "resource_group_name": "UdacityP1",
            "sku": "Basic",
            "tags": {
              "environment": "UdacityP1"
            }
          },
          "dependencies": [
            "azurerm_resource_group.UdacityP1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "UdacityP1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1d53902c-4bc6-44c8-82da-d1a59f04c098/resourceGroups/UdacityP1/providers/Microsoft.Network/virtualNetworks/UdacityP1-vnet/subnets/UdacityP1-subnet",
            "name": "UdacityP1-subnet",
            "resource_group_name": "UdacityP1",
            "virtual_network_name": "UdacityP1-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.UdacityP1",
            "azurerm_virtual_network.UdacityP1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "UdacityP1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "eb99609f-e368-4010-8770-aa05a542a96e",
            "id": "/subscriptions/1d53902c-4bc6-44c8-82da-d1a59f04c098/resourceGroups/UdacityP1/providers/Microsoft.Network/virtualNetworks/UdacityP1-vnet",
            "location": "eastus",
            "name": "UdacityP1-vnet",
            "resource_group_name": "UdacityP1",
            "tags": {
              "environment": "UdacityP1"
            }
          },
          "dependencies": [
            "azurerm_resource_group.UdacityP1"
          ]
        }
      ]
    }
  ]
}